src/styles/text.css
/* ... */
  p {
    text-align: center;
    letter-spacing: 4px;

  }
  .credits:hover{
    font-size: 180%;
    text-align: center;
    margin-bottom: 0.6cm;
    letter-spacing: 3px;
    -webkit-filter: brightness(70%);
    transform: scale(0.98);
  }
    .menutest{
  position: relative;
  align-items: center;
  margin-bottom: 5%;
  margin-top: 5%;
    }
    .menu{

    font-size: 260%;
    text-align: center;
    letter-spacing: 3px;
    margin-bottom: 1%;
    margin-top: 1%;
    position: relative;
    align-items: center;
    display: block;
  }
  .menu:hover{

    font-size: 260%;
    text-align: center;
    letter-spacing: 3px;

}
    #menumaybe{

    font-size: 260%;

    text-align: center;
    margin-bottom: 0.6cm;
    letter-spacing: 3px;
    -webkit-filter: brightness(70%);
    transform: scale(0.98);
  }
  .line{
    width: 15%;
    margin: auto;
    margin-bottom: 0.4cm;
    margin-top: 0.4cm;
    letter-spacing: 3px;
    border-bottom: double solid;
    border-bottom-width: medium;
    border-bottom-length: 2px;
    border-radius: 7px;
  }
  @media screen and (orientation: portrait) {
  .line{
    width: 55%;
    margin: auto;
    margin-bottom: 0.4cm;
    margin-top: 0.4cm;
    letter-spacing: 3px;
    border-bottom: double solid;
    border-bottom-width: medium;
    border-bottom-length: 2px;
    border-radius: 7px;
  }
  
  div{
    margin-bottom: -3.5%;
  }
  #title2{
    display:none;
  }
  }
  @media screen and (prefers-color-scheme: light){
    .line{
      width: 15%;
      margin: auto;
      margin-bottom: 0.4cm;
      margin-top: 0.4cm;
      letter-spacing: 3px;
      border-bottom: double solid;
      border-bottom-width: medium;
      border-bottom-length: 2px;
      border-radius: 7px;
      border-bottom-color: hsl(0, 6%, 10%);
    }
  }
    @media screen and (prefers-color-scheme: light) and (orientation: portrait){
    p.line{
      width: 55%;
      margin: auto;
      margin-bottom: 0.4cm;
      margin-top: 0.4cm;
      letter-spacing: 3px;
      border-bottom: double solid;
      border-bottom-width: medium;
      border-bottom-length: 2px;
      border-radius: 7px;
      border-bottom-color: hsl(0, 6%, 10%);
    }
  }
  h1{
    text-align: center;
    font-size: 250%;
    letter-spacing: 2px;
    margin-bottom:1cm;
    font-weight: 750;
  }
  h2{
    text-align: center;
    font-size: 200%;
    letter-spacing: 6px;
    margin-bottom:1cm;
    font-weight: 800;
  }
  h3{
    text-align: center;
    font-size: 100%;
    letter-spacing: 1px;
    margin-bottom: 0.4cm;
  }

    @media screen and (orientation: landscape)
{
  .para{
    font-weight: 400;
    letter-spacing: 1.5px;
    margin-right: 25%;
    margin-left: 25%;
    text-align:left;
    font-size: 110%;
    margin-top: 0.6cm;
    text-indent: 1.4em;
}
.why-is-this-a-problem{
  margin-left: 8%;
  margin-right: 8%;
}
  .para-special{
    font-weight: 400;
    letter-spacing: 1.5px;
    margin-right: 25%;
    margin-left: 25%;
    text-align:left;
    font-size: 110%;
    margin-top: 0.6cm;
    text-indent: 1.4em;
}
}


    @media screen and (orientation: portrait)
{
  .para{
    margin-right: 8%;
    margin-left: 8%;
    text-align:left;
    font-size: 130%;
    margin-top: 0.2cm;
    margin-bottom: 0.3cm;
    letter-spacing: 1.5px;

}
}

  @media screen and (orientation: landscape)
{
  p.title{
  margin-top: 0.6cm;
  font-size: 150%;
  font-family: "Life-Regular";
  margin-bottom: 0.1cm;
  margin-left: 8%;
  margin-right: 8%;
  font-weight: 535;
letter-spacing: 2.5px;
}
  p.title-special{
  margin-top: 0.6cm;
  font-size: 150%;
  font-family: "Life-Regular";
  margin-bottom: 0.1cm;
  font-weight: 575;
letter-spacing: 2.5px;
}
}

  @media screen and (orientation: portrait)
{
  p.title-special{
  margin-top: 1cm;
  font-size: 130%;
  font-family: "Life-Regular";
  font-weight: 400;
  margin-bottom: 0.1cm;
}
}
p.titlesmall{
  @media screen and (orientation: landscape)
{
  margin-top: 1.cm;
  font-size: 115%;
  font-family: "'Open Sans Variable','Montserrat Variable','Noto Sans Variable', sans-serif";
  margin-bottom: 0.1cm;
  margin-left: 8%;
  margin-right: 8%;
  font-weight: 525;
  letter-spacing: 0.17rem;
}
}
p.titlesmall{
  @media screen and (orientation: portrait)
{
  margin-top: 1cm;
  font-size: 115%;
  font-family: "'Open Sans Variable','Montserrat Variable','Noto Sans Variable', sans-serif";
  margin-left: 7%;
  margin-right: 7%;
  font-weight: 525;
  margin-bottom: 0.1cm;
}
}
p.disc{
  margin-top: 0.4cm;
  font-size: 100%;
  margin-bottom: 0.2cm;
  margin-left: 7%;
  margin-right: 7%;
  font-weight: 480;
  text-align: center;
  position: fixed;
  bottom: 0;

}
iframe{
    margin-top: 0.4cm;
  font-size: 100%;
  margin-bottom: 0.2cm;
  margin-left: 7%;
  margin-right: 7%;
  font-weight: 480;

  margin: 0 auto;
}
  body {
    background-color: light-dark(
      rgb(var(--light-mode-background)),
      rgb(var(--dark-mode-background))
    );


}


    form{
    @media screen and (orientation: portrait){
        margin-top: 2.5%;
        margin-bottom: 3%;
    }
        text-align: center;
    @media screen and (orientation: landscape) {
        margin-top: 1.5%;
        margin-bottom: 3.5%;
    }
    }
    textarea{
    @media screen and (orientation: portrait){
        width: 300px;
        height: 125px;
        margin-top: 2.5%;
        margin-bottom: 3%;
    }
    @media screen and (orientation: landscape) {
        width: 300px;
        height: 125px;
    }
    }
    input{
    @media screen and (orientation: portrait){
        width:70%;
        margin-top:2%;
        margin-bottom:2%;
    }
    @media screen and (orientation: landscape) {

    }
    }
    u{
    color:rgb(190, 247, 255);
    }
/* ... */

